--- a/assets/.config/wofi/style.css
+++ b/assets/.config/wofi/style.css
@@ -1,18 +1,19 @@
 window {
 margin: 0px;
-border: none;
+border: 2px solid rgba(245, 245, 255, 0.03);
 border-radius: 25px;
-background-color: rgba(7, 0, 16, 0);
+background-color: rgba(7, 0, 16, 0.9);
 }
 
 #input {
-margin: 10px;
-margin-top: 10px;
+margin: 20px;
+margin-top: 15px;
 padding: 10px 20px;
-border: 2px black;
+margin-bottom: 10px;
+border: none;
 border-radius: 25px;
 color: #f8f8f2;
-background-color: rgba(28, 27, 28, 0.85);
+background-color: rgba(18, 18, 28, 0.85);
 }
 
 #inner-box {
@@ -26,6 +27,7 @@ background-color: rgba(0, 0, 0, 0);
 margin: 5px;
 margin-bottom: 17px;
 border: none;
+padding-bottom: 0px;
 background-color: rgba(0, 0, 0, 0);
 }
 
@@ -49,10 +51,11 @@ color: #070010;
 border-radius: 20px;
 padding: 5px;
 padding-left: 20px;
-margin-left: 5px;
-margin-right: 5px;
+margin-left: 25px;
+margin-right: 25px;
 margin-top: 7px;
-background-color: rgba(28, 27, 28, 0.85);
+background-color: rgba(18, 18, 28, 0.85);
+border: none;
 }
 
 #entry > * {
@@ -60,9 +63,10 @@ color: #f8f8f2;
 }
 
 #entry:selected {
-background-color: #A0153E;
+background-color: rgba(245, 245, 255, 0.8);
 }
 
 #entry:selected #text {
 font-weight: bold;
+color: rgba(7, 0, 16, 1);
 }
